dcmstack (0.7-1) unstable; urgency=medium

  * Fresh upstream release
    + includes python3 support
    - debian/patches/* - upstreamed now

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 15 Oct 2018 16:48:07 -0400

dcmstack (0.6.2+git36-gc12d27d-1) unstable; urgency=medium

  * New upstream snapshot from v0.6.2-36-gc12d27d
  * debian/control
    - Added Vcs fields
    - Properly capitalized NIfTI
    - Boosted policy to 4.1.1

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 07 Dec 2017 19:39:52 -0500

dcmstack (0.6.2+git33-gb43919a.1-1) unstable; urgency=low

  * Initial release (Closes: #798040).

 -- Michael Hanke <mih@debian.org>  Wed, 23 Sep 2015 18:56:29 +0200